@@ -12,6 +12,7 @@ update-manager (1:0.63) gutsy; urgency=low
       (Fixes LP: #104337)
     - fix in snapshot feature (Fixes LP: #108413)
     - deal better with very slow downloads (disable cache cleanup)
+    - improve free space calculation in /boot (Fixes LP: #116163)
   * Separate downloading and upgrading (Fixes LP: #91978)
   * Show demotions before runing the upgrade (Fixes LP: #91998)
 
